# cvis

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  cvis.geany  main.c  meson.build  meson.options
arch-build/: PKGBUILD
assets/: credits.txt
include/: audio.h  common.h  config.h  fft.h  interpolation.h  logging.h  program.h  render.h  rl.h  sdl.h  terminal.h  visualizer.h  window.h
include/internal/: audio.h  config.h  program.h  render.h  visualizer.h
include/public/: audio.h  common.h  config.h  fft.h  interpolation.h  program.h  render.h
program/: config.c  program.c
render/: render.c  renderer-private.h  rl.c
src/: main.c
src/display/: window.c
src/include/: audio.h  config.h  declare.h  draw.h  fft.h  interpolation.h  logging.h  program.h  render.h  terminal.h  vec.h  visualizer.h
src/program/: config.c  program.c
src/render/: font.c  render-private.h  render.c  renderer-private.h  rl.c  sdl-font.c  sdl.c  sprite.c  terminal.c  window.c
src/util/: audio.c  common.c  draw.c.old  fft.c  interpolation.c  logging.c  vec.c
src/visualizers/: README.md  visualizer.c
src/visualizers/classic/: oscilloscope.c  slice.c  spectrum.c  vectorscope.c
src/visualizers/game/: snake.c
src/visualizers/game/snake/: snake.c
util/: audio.c  fft.c  logging.c
visualizers/classic/: spectrum.c  vectorscope.c
